Fix play icon vertical alignment

--- a/src/assets/controls.scss
+++ b/src/assets/controls.scss
@@ -52,6 +52,10 @@
     &:active {
       background: rgba(#ccc, 0.6);
     }
+
+    .icon {
+      vertical-align: middle;
+    }
   }
 
   .seek-bar {
